--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   dio: ^5.7.0
+  fl_chart: ^0.69.0
+  intl: ^0.19.0
+  syncfusion_flutter_charts: ^27.1.57
 
 dev_dependencies:
   flutter_test:
