--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fl_chart: ^0.69.0
   intl: ^0.19.0
   syncfusion_flutter_charts: ^27.1.57
+  internet_connection_checker_plus: ^2.5.2
 
 dev_dependencies:
   flutter_test:
